add all photos to events list
