# backend/events/serializers.py
@@ -1,7 +1,7 @@
 import markdown
 from rest_framework import serializers
 
-from .models import Event, EventCategory
+from .models import Event, EventCategory, EventImage
 
 
 class EventsCategorySerializer(serializers.ModelSerializer):
@@ -12,11 +12,18 @@ class EventsCategorySerializer(serializers.ModelSerializer):
         fields = ["id", "name", "rgb_color"]
 
 
+class EventImageSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = EventImage
+        fields = ["id", "image"]
+
+
 class EventsSerializer(serializers.ModelSerializer):
     """Serializer for an Events objects"""
 
     body_html = serializers.SerializerMethodField()
     category = EventsCategorySerializer()
+    images = EventImageSerializer(many=True, read_only=True)
 
     class Meta:
         model = Event
@@ -27,6 +34,7 @@ class EventsSerializer(serializers.ModelSerializer):
             "body",
             "body_html",
             "cover",
+            "images",
             "event_date",
             "location",
             "category",
